--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,30 +1,46 @@
-
+    
+<div id="container">
+    <img src="/assets/img/Zodiac Icons/aquarius.jpg">
+    <img src="/assets/img/Zodiac Icons/aries.jpg">
+    <img src="/assets/img/Zodiac Icons/cancer.jpg">
+    <img src="/assets/img/Zodiac Icons/capricorn.jpg">
+    <img src="/assets/img/Zodiac Icons/gemini.jpg">
+    <img src="/assets/img/Zodiac Icons/leo.jpg">
+    <img src="/assets/img/Zodiac Icons/libra.jpg">
+    <img src="/assets/img/Zodiac Icons/pieces.jpg">
+    <img src="/assets/img/Zodiac Icons/sagittarius.jpg">
+    <img src="/assets/img/Zodiac Icons/scorpio.jpg">
+    <img src="/assets/img/Zodiac Icons/taurus.jpg">
+    <img src="/assets/img/Zodiac Icons/virgo.jpg">
+</div>
 
 {{#each person}}
+
+<form id="form-user">
 <h1>Name</h1>
-<form>
 	<input type='text' name='{{name}}'  value='{{name}}'/>
-</form>
+
 <h1>Gender</h1>
-<form>
+
 	<input type='text' name='{{name}}'  value='{{name}}'/>
-</form>
+
 <h1>Age</h1>
-<form>
+
 	<input type='text' name='{{name}}'  value='{{name}}'/>
-</form>
+
 <h1>Sign</h1>
-<form>
+
 	<input type='text' name='{{name}}'  value='{{name}}'/>
-</form>
+
 <h1>Photo</h1>
-<form>
-	<input type='text' name='{{name}}'  value='{{name}}'/>
+	<input type='text' name='{{name}}'  value='{{name}}'/><br/>
+  <!-- Trigger/Open The Modal -->
+<button type="submit" id="myBtn">Submit</button>
 </form>
 {{/each}}
 
-<!-- Trigger/Open The Modal -->
-<button id="myBtn">Submit</button>
+
+
 
 <!-- The Modal -->
 <div id="myModal" class="modal">
@@ -39,15 +55,18 @@
   </div>
 
 <script>
+
 var modal = document.getElementById('myModal');
 
 var btn = document.getElementById("myBtn");
 
 var span = document.getElementsByClassName("close")[0]; 
-btn.onclick = function() {
-    modal.style.display = "block";
-}
 
+btn.addEventListener("click",function(e){
+    console.log(e)
+    modal.style.display = "block";
+    e.preventDefault();
+})
 
 span.onclick = function() {
     modal.style.display = "none";
@@ -58,6 +77,7 @@ window.onclick = function(event) {
         modal.style.display = "none";
     }
 }
+
 </script>
 
 	
