--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,9 +2,13 @@
     <html lang="en">
     <head>
     <meta charset="UTF-8">
+	
+	<title>Alchemy</title>
 
-    <link rel="stylesheet" href="/style.css">
-  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+
+    <link rel="stylesheet" href="/assets/css/alchemy_style.css">
+ 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </head>
