--- a/views/second.handlebars
+++ b/views/second.handlebars
@@ -1,3 +1,5 @@
-
+<script>
+document.getElementsByTagName("body").style.backgroundImage="url('/assets/img/Zodiac Backgrounds/zodiacbg.jpg')"
+</script>
 
 // Need to display all the matching signs based on the user's input //
