--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,10 +5,8 @@
 	
 	<title>Alchemy</title>
 
-
-
     <link rel="stylesheet" href="/assets/css/alchemy_style.css">
- 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="crossorigin="anonymous"></script>     
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </head>
