--- a/views/second.handlebars
+++ b/views/second.handlebars
@@ -5,7 +5,7 @@
 			<div class="panel panel-default">
 		    <div class="panel-body">
 		    	<p>{{name}}</p>
-					<p>Your sign: {{sign}}</p>
+					<p>your sign: {{sign}}</p>
 					<img src="{{image}}" id="profile">
 					<br>
 					<br>
@@ -17,13 +17,19 @@
 		<div class="col-sm-12 col-md-6 col-lg-6">
 			<div class="panel panel-default">
 		    <div class="panel-body">
-		    	<p>You are compatible with:</p>
-		    	{{#each matches}}
+		    	<p>you are compatible with:</p>
+		    	{{#each signs}}
 						<li>{{this}}</li>
 					{{/each}}
-		    	{{!-- <p>{{}}</p>
-					<p>{{}}</p>
-					<img src="{{}}" id="profile"> --}}
+					<div>
+						{{#each matches}}
+						<div>
+							<p>{{this.name}}<p>
+							<img src="{{this.image}}">
+							<p>{{this.sign}}<p>
+						</div>
+						{{/each}}
+					</div>
 				</div>
 		  </div>
 		</div>
